modified some styles url

--- a/src/components/Filter.module.css
+++ b/src/components/Filter.module.css
@@ -7,7 +7,7 @@
 
 	grid-column: 1 / -1;
 
-	background-image: url('./assets/backgroundImg.png');
+	background-image: url('./backgroundImg.png');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 
