--- a/src/index.css
+++ b/src/index.css
@@ -1,36 +1,36 @@
 @font-face {
 	font-family: Poppins;
-	src: url('./assets/fonts/Poppins-Light.woff') format(woff);
+	src: url('./fonts/Poppins-Light.woff') format(woff);
 	font-weight: 300;
 }
 
 @font-face {
 	font-family: Poppins;
-	src: url('./assets/fonts/Poppins-Medium.woff') format(woff);
+	src: url('./fonts/Poppins-Medium.woff') format(woff);
 	font-weight: 500;
 }
 
 @font-face {
 	font-family: Poppins;
-	src: url('./assets/fonts/Poppins-Bold.woff') format(woff);
+	src: url('./fonts/Poppins-Bold.woff') format(woff);
 	font-weight: 700;
 }
 
 @font-face {
 	font-family: Roboto;
-	src: url('./assets/fonts/Roboto-Regular.woff') format(woff);
+	src: url('./fonts/Roboto-Regular.woff') format(woff);
 	font-weight: 400;
 }
 
 @font-face {
 	font-family: Roboto;
-	src: url('./assets/fonts/Roboto-Medium.woff') format(woff);
+	src: url('./fonts/Roboto-Medium.woff') format(woff);
 	font-weight: 500;
 }
 
 @font-face {
 	font-family: Roboto;
-	src: url('./assets/fonts/Roboto-Bold.woff') format(woff);
+	src: url('./fonts/Roboto-Bold.woff') format(woff);
 	font-weight: 700;
 }
 
